# performance_test_bun_rust_ssr

./: .gitignore  HARDWARE_MONITORING.md  README.md
.github/workflows/: performace-test.yml
bun_server/: package.json
bun_server/src/: App.tsx  index.tsx
bun_server_cache/: package.json
bun_server_cache/src/: frontend.tsx  index.tsx
config/: config.json
react_manifest_askama/: .gitignore  Cargo.toml
react_manifest_askama/client/: package-lock.json
react_manifest_askama/client/src/: route_titles.json  router.jsx
react_manifest_askama/client/src/pages/: Home.jsx
react_manifest_askama/src/: main.rs
react_manifest_askama/templates/: layout.html
react_manifest_askama_actix/: Cargo.toml  README.md
react_manifest_askama_actix/client/: index.html  package.json  vite.config.js
react_manifest_askama_actix/client/src/: main.jsx
react_manifest_askama_actix/client/src/pages/: About.jsx
react_manifest_askama_actix/src/: main.rs
react_server/: Cargo.toml
react_server/frontend/: package.json  vite.config.ssr.ts  vite.config.ts
react_server/frontend/src/: client.tsx  server.tsx
react_server/frontend/src/components/: App.tsx
react_server/src/: main.rs
report/: .gitkeep  benchmark-20251208_073453.md  benchmark-20251208_074946.md  benchmark-20251208_083225.md  benchmark-20251208_121745.md  benchmark-20251209_005952.md
scripts/: collect-system-info.sh  generate-report.sh  monitor-hardware.sh  run-lighthouse.sh  run-wrk-benchmark.sh
