[package]
name = "react_manifest_askama"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
